update image linked

--- a/index.html
+++ b/index.html
@@ -52,35 +52,35 @@
             <h4><a href="#">Dream Team ></a></h4>
             <ul>
                 <li>
-                    <img src="../images/odin-bot.png">
+                    <img src="/images/odin-bot.png">
                     <p><a href="#">Mature-audience only Giphy images for all!</a></p>
                 </li>
                 <li>
-                    <img src="../images/satin.jpg">
+                    <img src="/images/satin.jpg">
                     <p><a href="#">All hail Satin Mulan, our glorious leader!</a></p>
                 </li>
                 <li>
-                    <img src="../images/lllloyd.jpg">
+                    <img src="/images/lllloyd.jpg">
                     <p><a href="#">It's Loyd. With one L.</a></p>
                 </li>
                 <li>
-                    <img src="../images/arun.jpg">
+                    <img src="/images/arun.jpg">
                     <p><a href="#">"If you think that's big you should see the size of my comb!"</a></p>
                 </li>
                 <li>
-                    <img src="../images/ada.jpg">
+                    <img src="/images/ada.jpg">
                     <p><a href="#">Design skills so sharp I cut my eye just looking at them.</a></p>
                 </li>
                 <li>
-                    <img src="../images/rhys.jpg">
+                    <img src="/images/rhys.jpg">
                     <p><a href="#">Australia's Trump. Giving out points for favours and money.</a></p>
                 </li>
                 <li>
-                    <img src="../images/chad.jpg">
+                    <img src="/images/chad.jpg">
                     <p><a href="#">Chad's angels, do do do. Harnessing the power of the amulet they found in the attic.</a></p>
                 </li>
                 <li>
-                    <img src="../images/ryanford.png">
+                    <img src="/images/ryanford.png">
                     <p><a href="#">Yes, this is my real picture.</a></p>
                 </li>
             </ul>
